--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2022-2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2022-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -88,6 +88,9 @@ add_subdirectory(benchmarks)
 
 # Build the operators
 add_subdirectory(operators)
+
+# Build the data loggers
+add_subdirectory(data_loggers)
 
 # Build the extensions
 add_subdirectory(gxf_extensions)
