update cvcuda_basic example to use the example MessageLogger
Signed-off-by: Gregory R. Lee <grelee@nvidia.com>

--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -28,7 +28,9 @@ add_holohub_application(body_pose_estimation DEPENDS
 
 add_holohub_application(colonoscopy_segmentation DEPENDS OPERATORS OPTIONAL aja_source)
 
-add_holohub_application(cvcuda_basic DEPENDS OPERATORS cvcuda_holoscan_interop)
+add_holohub_application(cvcuda_basic DEPENDS
+                        OPERATORS cvcuda_holoscan_interop
+                        DATA_LOGGERS message_logger)
 
 add_subdirectory(dds)
 
