--- a/applications/cvcuda_basic/cpp/CMakeLists.txt
+++ b/applications/cvcuda_basic/cpp/CMakeLists.txt
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: Copyright (c) 2023 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
+# SPDX-FileCopyrightText: Copyright (c) 2023-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 # SPDX-License-Identifier: Apache-2.0
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -16,7 +16,7 @@
 cmake_minimum_required(VERSION 3.20)
 project(cvcuda_basic CXX)
 
-find_package(holoscan 0.5 REQUIRED CONFIG
+find_package(holoscan 3.4 REQUIRED CONFIG
              PATHS "/opt/nvidia/holoscan" "/workspace/holoscan-sdk/install")
 # find_package(CUDAToolkit REQUIRED)  # Holoscan will already have included CUDA
 find_package(nvcv_types REQUIRED)
@@ -32,6 +32,7 @@ target_link_libraries(cvcuda_basic
   holoscan::ops::video_stream_replayer
   holoscan::ops::holoviz
   holoscan::ops::cvcuda_holoscan_interop
+  holoscan::data_loggers::message_logger
   nvcv_types
   cvcuda
 )
