Improve docker for colonoscopy application (#939)
* Improve docker for colonoscopy application

Signed-off-by: Julien Jomier <jjomier@nvidia.com>

* Apply suggestions from code review

Co-authored-by: Tom Birdsong <40648863+tbirdso@users.noreply.github.com>
Co-authored-by: Alexis Girault <agirault@users.noreply.github.com>
Signed-off-by: Julien Jomier <219040+jjomier@users.noreply.github.com>

* Remove lazy import and improve python installation in dockerfile

* Fix linting errors

Signed-off-by: Julien Jomier <jjomier@nvidia.com>

---------

Signed-off-by: Julien Jomier <jjomier@nvidia.com>
Signed-off-by: Julien Jomier <219040+jjomier@users.noreply.github.com>
Co-authored-by: Tom Birdsong <40648863+tbirdso@users.noreply.github.com>
Co-authored-by: Alexis Girault <agirault@users.noreply.github.com>
Signed-off-by: Vani Nagarajan <vanin@nvidia.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,7 @@
 # limitations under the License.
 
 cmake_minimum_required(VERSION 3.20.1)
-project(Holohub CXX)
+project(Holohub NONE)
 
 # set CMAKE_MODULE_PATH
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake)
