Update Dockerfile to Avoid Unnecessary Warning (#977)
* add BASE_SDK_VERSION to dockerfile

Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

* update operators/advanced_network/Dockerfile

Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>

---------

Signed-off-by: B Hashemian <3968947+bhashemian@users.noreply.github.com>
Signed-off-by: Vani Nagarajan <vanin@nvidia.com>

--- a/operators/advanced_network/Dockerfile
+++ b/operators/advanced_network/Dockerfile
@@ -16,7 +16,9 @@
 # limitations under the License.
 
 # Latest base image is overridden by the holohub tooling
-ARG BASE_IMAGE
+ARG GPU_TYPE
+ARG BASE_SDK_VERSION
+ARG BASE_IMAGE=nvcr.io/nvidia/clara-holoscan/holoscan:v${BASE_SDK_VERSION}-${GPU_TYPE}
 
 # ==============================
 # Base layer
