Rename "Isaac Holoscan Bridge" to "Isaac Sim Holoscan Bridge" and revise README.
This application is specifically demonstrating the use of Isaac Sim, so should
be disambiguated from "Isaac", which is a large umbrella for NVIDIA robotics.

Also revises the documentation to clarify the components and high-level
software-in-the-loop data flow.

Signed-off-by: Connor Smith <cosmith@nvidia.com>

--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -57,7 +57,7 @@ add_holohub_application(endoscopy_tool_tracking DEPENDS
 
 add_subdirectory(h264)
 
-add_holohub_application(isaac_holoscan_bridge)
+add_holohub_application(isaac_sim_holoscan_bridge)
 
 add_holohub_application(high_speed_endoscopy DEPENDS
                         OPERATORS emergent_source)
