--- a/applications/ehr_query_llm/lmm/Dockerfile
+++ b/applications/ehr_query_llm/lmm/Dockerfile
@@ -24,12 +24,14 @@ ARG TARGETARCH
 FROM ${BASE_IMAGE} as base
 ARG DEBIAN_FRONTEND=noninteractive
 #
-# Holohub run setup
+# Holohub dev setup
 #
 RUN mkdir -p /tmp/scripts
-COPY run /tmp/scripts/
-RUN chmod +x /tmp/scripts/run
-RUN /tmp/scripts/run setup
+COPY holohub /tmp/scripts/
+RUN mkdir -p /tmp/scripts/utilities
+COPY utilities /tmp/scripts/utilities/
+RUN chmod +x /tmp/scripts/holohub
+RUN /tmp/scripts/holohub setup && rm -rf /var/lib/apt/lists/*
 
 # Install PortAudio to enable PyAudio
 RUN apt-get update && \
