--- a/.github/workflows/check_urls.yml
+++ b/.github/workflows/check_urls.yml
@@ -22,7 +22,7 @@ jobs:
         if git diff --name-only origin/${{ github.base_ref }}..HEAD | grep -E '\.(md|html|rst)$' > changed_files.txt; then
           if [ -s changed_files.txt ]; then
             echo "any_changed=true" >> $GITHUB_OUTPUT
-            echo "changed_files_list=$(cat changed_files.txt | tr '\n' '\0' | xargs -0 printf '%s ')" >> $GITHUB_OUTPUT
+            echo "changed_files_list=$(cat changed_files.txt | sed 's|^|'"'"'${{ github.workspace }}/|; s|$|'"'"'|' | tr '\n' ' ')" >> $GITHUB_OUTPUT
           else
             echo "any_changed=false" >> $GITHUB_OUTPUT
           fi
