--- a/operators/CMakeLists.txt
+++ b/operators/CMakeLists.txt
@@ -26,6 +26,7 @@ add_holohub_operator(emergent_source DEPENDS EXTENSIONS emergent_source)
 add_holohub_operator(fft)
 add_holohub_operator(grpc_operators)
 add_holohub_operator(high_rate_psd)
+add_holohub_operator(iio_controller)
 add_holohub_operator(low_rate_psd)
 add_holohub_operator(lstm_tensor_rt_inference DEPENDS EXTENSIONS lstm_tensor_rt_inference)
 add_holohub_operator(npp_filter)
