iio: Add application examples using the iio_controller operators
This commit introduces a few examples using the iio_controller suite of
operators. Main Applications:
- Basic Examples (C++): The iio/cpp/basic_example directory contains
at least one example of using each operator from the iio_controller
suite.
- Basic Examples (Python): This directory contains the examples from
the c++ version, but using the python bindings.
- Pluto FFT: This examples uses a PlutoSDR with the FFT operator to
compute and display a FFT plot, showcasing a more complex example.

Signed-off-by: Andrei-Fabian-Pop <Andreifabian.Pop@analog.com>

--- a/applications/CMakeLists.txt
+++ b/applications/CMakeLists.txt
@@ -62,6 +62,8 @@ add_holohub_application(imaging_ai_segmentator)
 
 add_holohub_application(hyperspectral_segmentation)
 
+add_holohub_application(iio DEPENDS OPERATORS iio_controller fft)
+
 add_subdirectory(laser_detection_latency)
 
 add_holohub_application(monai_endoscopic_tool_seg DEPENDS OPERATORS aja_source)
