--- a/applications/iio/python/CMakeLists.txt
+++ b/applications/iio/python/CMakeLists.txt
@@ -13,11 +13,19 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-cmake_minimum_required(VERSION 3.20)
-project(iio_controller LANGUAGES NONE)
+add_custom_target(
+  python_iio ALL
+  COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/iio_app.py"
+          "${CMAKE_CURRENT_BINARY_DIR}/iio_app.py"
+  DEPENDS "iio_app.py"
+  BYPRODUCTS "iio_app.py")
 
-add_subdirectory(cpp)
+add_custom_target(
+  py_iio_config_yaml
+  COMMAND
+    ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_SOURCE_DIR}/../iio_config.yaml"
+    ${CMAKE_CURRENT_BINARY_DIR}
+  DEPENDS "${CMAKE_CURRENT_SOURCE_DIR}/../iio_config.yaml"
+  BYPRODUCTS "${CMAKE_CURRENT_BINARY_DIR}/iio_config.yaml")
 
-if(HOLOHUB_BUILD_PYTHON)
-  add_subdirectory(python)
-endif()
+add_dependencies(python_iio py_iio_config_yaml)
