--- a/applications/iio/iio_config.yaml
+++ b/applications/iio/iio_config.yaml
@@ -13,11 +13,29 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-cmake_minimum_required(VERSION 3.20)
-project(iio_controller LANGUAGES NONE)
-
-add_subdirectory(cpp)
-
-if(HOLOHUB_BUILD_PYTHON)
-  add_subdirectory(python)
-endif()
+cfg:
+  uri: "ip:192.168.2.1"
+  setup:
+    devices:
+      - ad9361-phy:
+          attrs:
+            - calib_mode: "manual"
+            - ensm_mode: "fdd"
+          debug-attrs:
+            - loopback: 1
+      - cf-ad9361-dds-core-lpc:
+          channels:
+            output:
+              - voltage1:
+                  attrs:
+                    - sampling_frequency: 30719999
+      - cf-ad9361-lpc:
+          channels:
+            input:
+              - voltage0:
+                  attrs:
+                    - sampling_frequency: 30719999
+          attrs:
+            - sync_start_enable: "arm"
+          buffer-attrs:
+            - length_align_bytes: 8
