Add Video Writer operator and sample application
- Introduced the `nv_video_writer` operator to write H.264/H.265 video files from encoded frames.
- Updated CMake configurations to include the new operator and its dependencies.
- Enhanced README files for the new operator and updated licensing information.
- Refactored existing CMakeLists to ensure proper integration of the new components.

Signed-off-by: [Your Name] <your.email@example.com>
Signed-off-by: Victor Chang <vicchang@nvidia.com>

--- a/applications/nvidia_video_codec/CMakeLists.txt
+++ b/applications/nvidia_video_codec/CMakeLists.txt
@@ -31,5 +31,16 @@ if(OP_nv_video_encoder OR OP_nv_video_decoder)
   endif()
 endif()
 
-add_holohub_application(nvc_encode_decode DEPENDS OPERATORS nv_video_encoder nv_video_decoder)
-add_holohub_application(nvc_decode DEPENDS OPERATORS nv_video_encoder nv_video_decoder nv_video_reader)
+add_holohub_application(nvc_decode 
+                        DEPENDS OPERATORS 
+                        nv_video_encoder 
+                        nv_video_decoder 
+                        nv_video_reader)
+add_holohub_application(nvc_encode_decode 
+                        DEPENDS OPERATORS 
+                        nv_video_encoder 
+                        nv_video_decoder)
+add_holohub_application(nvc_encode_writer 
+                        DEPENDS OPERATORS 
+                        nv_video_encoder 
+                        nv_video_writer)
