--- a/operators/nvidia_video_codec/CMakeLists.txt
+++ b/operators/nvidia_video_codec/CMakeLists.txt
@@ -39,3 +39,4 @@ set(NVC_SDK_PATH ${NVC_SDK_DIR} CACHE PATH "Path to NVIDIA Video Codec SDK")
 add_holohub_operator(nv_video_encoder)
 add_holohub_operator(nv_video_decoder)
 add_holohub_operator(nv_video_reader)
+add_holohub_operator(nv_video_writer)
