fiv nvstaging url/address comments
Signed-off-by: Wenqi Li <wenqil@nvidia.com>

--- a/.github/workflows/check_compliance.yml
+++ b/.github/workflows/check_compliance.yml
@@ -19,13 +19,8 @@ jobs:
         echo "Checking copyright headers in changed files..."
         python3 .github/workflows/scripts/check_copyright.py --git-modified-only origin/${{ github.base_ref }} \
           --exclude-config .github/workflows/scripts/copyright_excludes.txt
+        # full check: python3 .github/workflows/scripts/check_copyright.py --exclude-config .github/workflows/scripts/copyright_excludes.txt .
 
-    # - name: Check copyright headers (all files)
-    #   if: github.event_name == 'push'
-    #   run: |
-    #     echo "Checking copyright headers in all files..."
-    #     python3 .github/workflows/scripts/check_copyright.py \
-    #       --exclude-config .github/workflows/scripts/copyright_excludes.txt .
 
     - name: Check for internal artifacts
       run: |
