Refactor video writing functionality by replacing NvVideoWriter with TensorToFile operator
- Removed the NvVideoWriter operator and its associated files.
- Introduced the TensorToFile operator to write tensor data to files.
- Updated CMake configurations to include the new TensorToFile operator.
- Modified nvc_encode_writer to utilize TensorToFile for writing output.
- Enhanced metadata and documentation for the new operator.

Signed-off-by: Victor Chang <vicchang@nvidia.com>

--- a/applications/nvidia_video_codec/CMakeLists.txt
+++ b/applications/nvidia_video_codec/CMakeLists.txt
@@ -40,4 +40,4 @@ add_holohub_application(nvc_encode_decode DEPENDS OPERATORS
                           nv_video_decoder)
 add_holohub_application(nvc_encode_writer DEPENDS OPERATORS
                           nv_video_encoder
-                          nv_video_writer)
+                          tensor_to_file)
