--- a/applications/xr_gsplat/Dockerfile
+++ b/applications/xr_gsplat/Dockerfile
@@ -63,11 +63,11 @@ RUN pip install scipy
 WORKDIR /app/xr_gsplat
 
 #
-# Holohub run setup
+# Holohub dev setup
 #
 RUN mkdir -p /tmp/scripts
-COPY run /tmp/scripts/
+COPY holohub /tmp/scripts/
 RUN mkdir -p /tmp/scripts/utilities
-COPY utilities/holohub_autocomplete /tmp/scripts/utilities/
-RUN chmod +x /tmp/scripts/run
-RUN /tmp/scripts/run setup
+COPY utilities /tmp/scripts/utilities/
+RUN chmod +x /tmp/scripts/holohub
+RUN /tmp/scripts/holohub setup && rm -rf /var/lib/apt/lists/*
