add depth buffer supported in HSDK>= 3.3
Signed-off-by: Mimi Liao <mimil@nvidia.com>

--- a/applications/xr_holoviz/config.yaml
+++ b/applications/xr_holoviz/config.yaml
@@ -14,5 +14,5 @@
 # limitations under the License.
 
 holoviz:
-  width: 1792
-  height: 1008
+  width: 4800 # This is the config for Apple Vision Pro. Refer to README.md on how to get this config.
+  height: 1920
