--- a/applications/xr_gsplat/CMakeLists.txt
+++ b/applications/xr_gsplat/CMakeLists.txt
@@ -15,13 +15,14 @@
 
 project(xr_gsplat NONE)
 
-find_package(holoscan 3.0 REQUIRED CONFIG
+find_package(holoscan 3.3 REQUIRED CONFIG
              PATHS "/opt/nvidia/holoscan" "/workspace/holoscan-sdk/install")
 
 # Install gsplat
+find_package(Python3 REQUIRED COMPONENTS Interpreter)
 add_custom_target(install_gsplat ALL)
 add_custom_command(
     TARGET install_gsplat
-    COMMAND ${Python3_EXECUTABLE} -m pip install git+https://github.com/nerfstudio-project/gsplat.git
+    COMMAND ${Python3_EXECUTABLE} -m pip install --no-build-isolation git+https://github.com/nerfstudio-project/gsplat.git
     COMMENT "Installing gsplat..."
 )
